--- a/addToSiriButton/ios/Podfile
+++ b/addToSiriButton/ios/Podfile
@@ -2,11 +2,12 @@ require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 
-platform :ios, '12.0'
+platform :ios, '10.0'
 
 
 target 'addToSiriButton' do
   config = use_native_modules!
+  #use_frameworks!
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -23,11 +24,16 @@ target 'addToSiriButton' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  #use_flipper!()
+ #use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+       config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+      end
+     end
   end
 
-  use_frameworks!
+  
 end
