--- a/addToSiriButton/ios/addToSiriButton/Info.plist
+++ b/addToSiriButton/ios/addToSiriButton/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>NSUserActivityTypes</key>
 	<array>
-		<string>com.navitus.addToSiriButton</string>
+		<string>org.reactjs.native.example.addToSiriButton</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
